--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ h1 {
       rgba(255, 0, 150, 0.15),
       rgba(255, 0, 150, 0.15)
     ),
-    url(/assets/cinema.jpg);
+    url(assets/cinema.jpg);
   background-size: cover;
 }
 .bold {
